media/css/zamboni/discovery-pane.css
/* ... */
/* @end */

/* @Mission, @My-account *********/
#mission, #my-account {
    margin: 0 0 0 -10px;
    padding: 10px;
    float: right;
    width: 22%;
    width: -moz-calc(24% - 22px);
    border-radius: 8px;
}

.recs #mission {
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
}

#my-account {
    background:
        url(../../img/zamboni/discovery_pane/bg-home.png) no-repeat 100% 100%,
        -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    border-radius: 0 8px 8px 0;
}
.no-recs header.auth {
    background:
        url(../../img/zamboni/discovery_pane/bg-home.png) no-repeat 100% -moz-calc(100% - 3px),
        -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
}
.no-recs #my-account {
    background: none;
    padding-bottom: 0;
}
.recs #mission,
.recs #my-account {
    border-left-width: 0;
    border-radius: 8px;
    float: left;
    margin-left: 0;
    padding-left: 10px;
    width: -moz-calc(100% - 20px);
}

.html-rtl #mission,
.html-rtl #my-account {
    float: left;
}

.html-rtl .recs #mission,
.html-rtl .recs #my-account {
    float: right;
}

#mission p,
#my-account p {
    font-size: 15px;
    line-height: 1.1;
}

#mission p,
#my-account p,
#my-account ul {
    margin-bottom: 0.5em;
}

#my-account ul {
    color: #76787b;
    line-height: 1.5;
    list-style: disc inside;
}

#my-account p#logout {
    font-size: 11px;
    margin: 0 0 0 13px;
}

#mission a,
#mission strong,
#my-account strong {
    font-weight: bold;
}

#mission #download-count {
    font-size: 1em;
}

/* @Main @Feature *********/
#main #main-feature {
    display: none;
    position: relative;
    padding: 0;
    background: transparent;
    border: 0;
    box-shadow: none;
}

.feature {
    background: rgba(255,255,255,0.35) no-repeat;
    border: 1px solid #a8b8d1;
    box-shadow: inset 0 1px 3px rgba(58,78,103,0.15), 0 1px 0 rgba(255,255,255,0.5);
    margin-bottom: 10px;
    min-height: 240px;
    padding: 10px 9%;
    border-radius: 8px;
}

#main #featured-addons {
    margin-top: 283px;
}
#main #main-feature.js + #featured-addons {
    margin-top: 0;
}

#main #main-feature.js {
    height: 273px;
    overflow: hidden;
}

#main-feature.js .feature {
    height: 251px;
    position: relative;
    overflow: hidden;
    box-shadow: none;
}

.panel {
    width: 100%;
    top: 0;
}

#nav-features,
#nav-recs {
    height: 0;
    margin: 0;
    display: none;
    position: relative;
}

#main-feature.js #nav-features,
.recs #recs #nav-recs.js {
    display: block;
}

#nav-features a,
#nav-recs a {
    position: absolute;
    top: 0;
    margin: 1px;
    z-index: 10;
    display: block;
    height: 271px;
    width: 4%;
    text-indent: -999em;
    text-decoration: none;
    overflow: hidden;
    opacity: 0.3;
    -moz-transition-property: opacity, width;
    -moz-transition-duration: 0.5s;
    -moz-transition-timing-function: ease-out;
}

#nav-recs a {
    margin: 0;
    height: 163px;
}

#nav-features a:hover,
#nav-features a:active,
#nav-recs a:hover,
#nav-recs a:active {
    opacity: 1;
    width: 7%;
    -moz-transition-property: opacity, width, background-color;
    -moz-transition-duration: 0.2s;
    -moz-transition-timing-function: ease-out;
}

#nav-features a:focus,
#nav-recs a:focus {
    outline: 0;
}

.nav-prev a,
#lightbox-nav a#lightbox-nav-btnPrev {
    left: 0;
    border-radius: 8px 0 0 8px;
    background: url("../../img/zamboni/discovery_pane/arrow-left.png") no-repeat center center, -moz-linear-gradient(left, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.5) 80%) !important;
    box-shadow: inset rgba(255,255,255,0.1) 0px 0px 6px, rgba(125,125,125, 0.1) 1px 0px 3px;
}

.nav-prev a:hover,
.nav-prev a:active {
    box-shadow: inset rgba(255,255,255,0.4) 0px 0px 6px, rgba(125,125,125,0.1) 2px 0px 3px;
}

.nav-next a,
#lightbox-nav a#lightbox-nav-btnNext {
    right: 0;
    border-radius: 0 8px 8px 0;
    background: url("../../img/zamboni/discovery_pane/arrow-right.png") no-repeat center center, -moz-linear-gradient(right, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.5) 80%) !important;
    box-shadow: inset rgba(255,255,255,0.1) 0px 0px 6px, rgba(125,125,125, 0.1) -1px 0px 3px;
}

.nav-next a:hover,
.nav-next a:active {
    box-shadow: inset rgba(255,255,255,0.4) 0px 0px 6px, rgba(125,125,125,0.1) -2px 0px 3px;
}

#nav-recs .nav-prev a {
    border-top-left-radius: 0;
}
#nav-recs .nav-next a {
    border-top-right-radius: 0;
}

.nav-prev .disabled,
.nav-next .disabled {
    visibility: hidden;
}

/* @group Rock Your Firefox (RYFF) */
.ryff {
    position: relative;
    overflow: hidden;
    padding: 20px 10% 10px 270px;
    background: url(../../img/zamboni/discovery_pane/promos/ryff-bg.png) 0 0 no-repeat;
    color: #333;
}

.ryff h3,
.promo h2 {
    font-size: 36px;
    font-weight: bold;
    line-height: 1.1;
}

.ryff h2 {
    white-space: nowrap;
}

.ryff h3 {
    margin-bottom: 10px;
}

.ryff h3 a {
    color: #7e100a;
    text-decoration: none;
}

.ryff .desc img {
    width: 40%;
    float: right;
    margin: 0 0 .5em 10px;
}
/* @end */

/* @Collection *********/
.collection h2,
#featured-addons h2,
#starter h3,
#st-patricks h3,
#fx4-collection h3,
#recs .header h2,
#recs .gallery {
    max-width: 650px;
    margin: 10px auto;
}

#starter h2,
#starter h3,
#st-patricks h2,
#st-patricks h3,
#fx4-collection h2,
#fx4-collection h3,
#recs .header h2,
#recs .gallery {
    margin: 0 auto;
}

.collection .more {
    text-align: center;
}

.shopping {
    background-image: url("../../img/zamboni/discovery_pane/bg-hanger.png"),
    url("../../img/zamboni/discovery_pane/bg-gift.png");
    background-position: 107% 20px, 9% 92%;
    background-repeat: no-repeat;
}
/* ... */

